ingress-gce-blogpost/00_backends.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: echo-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: echo-server
      annotations:
        kubernetes.io/change-cause: "First deploy"
    spec:
      containers:
      - image: eu.gcr.io/google-containers/echoserver:1.10
        imagePullPolicy: Always
        name: echo-server

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-server-2
spec:
  replicas: 2
  selector:
    matchLabels:
      name: echo-server-2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: echo-server-2
      annotations:
        kubernetes.io/change-cause: "First deploy"
    spec:
      containers:
      - image: eu.gcr.io/google-containers/echoserver:1.10
        imagePullPolicy: Always
        name: echo-server-2

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: test-webserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: test-webserver
      annotations:
        kubernetes.io/change-cause: "First deploy"
    spec:
      containers:
      - image: eu.gcr.io/google-containers/test-webserver:latest
        imagePullPolicy: Always
        name: test-webserver

---

apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: echo-server
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: echo-server

---

apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: test-webserver
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: test-webserver

---

apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: echo-server-2
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: echo-server-2
